--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Create Alert — Crypto Lifeguard</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="app-header">
@@ -18,7 +18,7 @@
   <main class="container">
     <section class="card">
       <div class="token-select-row" style="margin-bottom:8px">
-        <a href="./index.html" class="btn">← Back to alerts</a>
+        <a href="/" class="btn">← Back to alerts</a>
       </div>
 
       <form id="alert-form" class="alert-form">
@@ -62,6 +62,7 @@
     <span>© 2025 Crypto Lifeguard — demo build</span>
   </footer>
 
-  <script src="./create.js"></script>
+  <!-- IMPORTANT: type="module" so Vite bundles & rewrites the path in /dist -->
+  <script type="module" src="/create.js"></script>
 </body>
 </html>
