--- a/create.html
+++ b/create.html
@@ -7,53 +7,74 @@
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
-  <header class="app-header">
-    <div class="brand">
-      <span class="logo">🌊🛟</span>
-      <h1>Create Alert</h1>
+  <!-- Consistent dark-blue banner like the home page -->
+  <header class="topbar" role="banner">
+    <div class="topbar-inner">
+      <div class="brand-wrap">
+        <img
+          class="brand-logo"
+          src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png"
+          alt="Crypto Lifeguard Logo"
+          decoding="async"
+          fetchpriority="high"
+        />
+        <div class="brand-text">
+          <h1 class="brand-title">Crypto Lifeguard</h1>
+          <p class="brand-tagline">Create a new alert</p>
+        </div>
+      </div>
+
+      <div class="actions">
+        <a class="menu-btn" href="/">← Back to app</a>
+      </div>
     </div>
-    <p class="tagline">Post a new alert to the shared feed.</p>
   </header>
 
-  <main class="container">
-    <section class="card">
-      <div class="token-select-row" style="margin-bottom:8px">
-        <a href="/" class="btn">← Back to alerts</a>
+  <main class="container" style="max-width: 960px;">
+    <section class="card" style="margin-top: 12px;">
+      <div class="token-select-row" style="justify-content: space-between; margin-bottom: 6px;">
+        <h2 class="section-title" style="margin: 0;">New Alert</h2>
+        <a href="/" class="btn" style="padding: 8px 12px;">← Back</a>
       </div>
 
       <form id="alert-form" class="alert-form">
-        <h3 class="section-title" style="margin-bottom:8px">Submit a new alert</h3>
         <div class="form-grid">
           <div>
-            <label class="label">Token</label>
+            <label class="label" for="form-token">Token</label>
             <input id="form-token" class="input" placeholder="e.g., ETH or BTC" list="token-datalist" required />
             <datalist id="token-datalist"></datalist>
           </div>
+
           <div>
-            <label class="label">Severity</label>
+            <label class="label" for="form-severity">Severity</label>
             <select id="form-severity" class="input" required>
-              <option value="critical">Critical</option>
-              <option value="warning">Warning</option>
-              <option value="info" selected>Info</option>
+              <option value="critical">Critical (🚨)</option>
+              <option value="warning">Warning (⚠️)</option>
+              <option value="info" selected>Info (🛟)</option>
             </select>
           </div>
+
           <div class="col-span-2">
-            <label class="label">Title</label>
-            <input id="form-title" class="input" placeholder="Alert title" required />
+            <label class="label" for="form-title">Title</label>
+            <input id="form-title" class="input" placeholder="Short, action-oriented title (e.g., ‘Validator maintenance window’)" required />
           </div>
+
           <div class="col-span-2">
-            <label class="label">Description</label>
-            <textarea id="form-description" class="input" rows="3" placeholder="Details about the alert" required></textarea>
+            <label class="label" for="form-description">Description</label>
+            <textarea id="form-description" class="input" rows="3" placeholder="Optional details, steps, links…" required></textarea>
           </div>
+
           <div>
-            <label class="label">Deadline</label>
+            <label class="label" for="form-deadline">Deadline</label>
             <input id="form-deadline" class="input" type="datetime-local" required />
           </div>
+
           <div class="form-actions">
-            <button type="submit" class="btn btn-teal" id="submit-btn">Add alert</button>
+            <button type="submit" class="btn btn-teal" id="submit-btn">Create alert</button>
           </div>
         </div>
-        <p id="msg" class="muted" style="margin-top:8px"></p>
+
+        <p id="msg" class="muted" style="margin-top:10px"></p>
       </form>
     </section>
   </main>
@@ -62,7 +83,7 @@
     <span>© 2025 Crypto Lifeguard — demo build</span>
   </footer>
 
-  <!-- IMPORTANT: type="module" so Vite bundles & rewrites the path in /dist -->
+  <!-- IMPORTANT: module so Vite bundles it -->
   <script type="module" src="/create.js"></script>
 </body>
 </html>
