--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <main class="container">
     <section class="card">
-      <h2 class="section-title">Select tokens to watch</h2>
+      <h2 class="section-title">Select tokens to monitor</h2>
       <div class="token-select-row">
         <input id="token-input" class="input" type="text" placeholder="Type a token symbol (e.g., BTC, ETH, MATIC) and press Enter…" list="token-datalist" aria-label="Add token" />
         <datalist id="token-datalist"></datalist>
