Implement tag filtering UI and functionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <button class="sev-btn active" data-sev="warning"  aria-pressed="true" title="Warning">⚠️</button>
         <button class="sev-btn active" data-sev="info"     aria-pressed="true" title="Info">🛟</button>
       </div>
+      
+      <div id="tag-filters" class="tag-filters" role="group" aria-label="Filter by tag"></div>
 
       <label class="switch small" id="showall-wrap" title="Include dismissed alerts">
         <span class="switch-caption">Show all</span>
