--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
 
-  <!-- IMPORTANT for Vite build -->
-  <script type="module" src="/app.js"></script>
+  <!-- Load app.js as regular script -->
+  <script src="/app.js"></script>
 </body>
 </html>
