Fix script loading and alert tags functionality

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
   <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
 
-  <!-- Load app.js as regular script -->
+  <!-- Load scripts in correct order -->
+  <script src="/alerts-tags.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
