--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 
   <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
 
-  <!-- Load scripts in correct order -->
-  <script src="/alerts-tags.js"></script>
-  <script src="/app.js"></script>
+  <!-- IMPORTANT for Vite build -->
+  <script type="module" src="/app.js"></script>
 </body>
 </html>
