Update server and create form to handle alert tags properly

--- a/create.html
+++ b/create.html
@@ -69,6 +69,11 @@
             <input id="form-deadline" class="input" type="datetime-local" required />
           </div>
 
+          <div>
+            <label class="label">Tags</label>
+            <div id="tag-selectors" class="tag-filters" style="padding: 10px 0;"></div>
+          </div>
+
           <div class="form-actions">
             <button type="submit" class="btn btn-teal" id="submit-btn">Create alert</button>
           </div>
