Add tag reset button, simplify tag display, and add migration for existing alerts

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
         <button class="sev-btn active" data-sev="info"     aria-pressed="true" title="Info">🛟</button>
       </div>
       
-      <div id="tag-filters" class="tag-filters" role="group" aria-label="Filter by tag"></div>
+      <div class="tag-filters-wrap">
+        <div id="tag-filters" class="tag-filters" role="group" aria-label="Filter by tag"></div>
+        <button id="reset-tags" class="btn" style="padding: 6px 12px; font-size: 14px;">Reset Tags</button>
+      </div>
 
       <label class="switch small" id="showall-wrap" title="Include dismissed alerts">
         <span class="switch-caption">Show all</span>
