feat(ui): convert tag filters to multi-select dropdown for mobile UX
- Replace horizontal button layout with compact dropdown
- Add handleTagFilterChange() and resetTagFilters() functions
- Update mobile responsive CSS for better space utilization
- Maintain multi-tag selection functionality

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       </div>
       
       <div class="tag-filters-wrap">
-        <div id="tag-filters" class="tag-filters" role="group" aria-label="Filter by tag"></div>
+        <select id="tag-filters" class="tag-select" multiple aria-label="Filter by tag">
+          <option value="">Select tags to filter...</option>
+        </select>
         <button id="reset-tags" class="btn" style="padding: 6px 12px; font-size: 14px;">Reset Tags</button>
       </div>
 
