--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
       <div class="tag-filters-wrap">
         <div class="tag-dropdown-container">
           <label for="tag-filters" class="tag-dropdown-label">Filter by tags:</label>
-          <select id="tag-filters" class="tag-select" multiple aria-label="Filter by tag">
-            <option value="">Select tags to filter...</option>
-          </select>
+          <div class="custom-dropdown">
+            <button type="button" class="dropdown-trigger" id="tag-dropdown-trigger">
+              <span class="dropdown-text">Select tags...</span>
+              <span class="dropdown-arrow">▼</span>
+            </button>
+            <div class="dropdown-options" id="tag-dropdown-options">
+              <!-- Options will be populated by JavaScript -->
+            </div>
+          </div>
           <div id="selected-tags-display" class="selected-tags-pills"></div>
         </div>
         <button id="reset-tags" class="btn btn-secondary" style="padding: 6px 12px; font-size: 14px;">Clear All</button>
