style(ui): move Clear All button underneath dropdown and make it smaller
- Position Clear All button below the tag selector for cleaner layout
- Reduce button size with smaller padding and font-size
- Remove unused btn-secondary styles
- Better visual hierarchy with the button underneath the main controls

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
           </div>
           <div id="selected-tags-display" class="selected-tags-pills"></div>
+          <button id="reset-tags" class="btn btn-clear-tags">Clear All</button>
         </div>
-        <button id="reset-tags" class="btn btn-secondary" style="padding: 6px 12px; font-size: 14px;">Clear All</button>
       </div>
 
       <label class="switch small" id="showall-wrap" title="Include dismissed alerts">
