--- a/profile.html
+++ b/profile.html
@@ -22,8 +22,6 @@
     @media (max-width: 720px){ .profile-grid{ grid-template-columns: 1fr; } }
   </style>
   <script type="module" src="/profile.js"></script>
-  <script type="module" src="/app.js"></script>
-  <!-- app.js loads to keep topbar behavior consistent (logout handler, etc.) -->
 </head>
 <body>
   <a href="/create.html" class="fab" aria-label="New alert" title="New alert">+</a>
@@ -48,7 +46,7 @@
       <div class="profile-header">
         <div id="prof-avatar" class="profile-avatar"></div>
         <div>
-          <h2 id="prof-name" class="profile-name">Loading…</h2>
+          <h2 id="prof-name" class="profile-name">Loading...</h2>
           <p id="prof-username" class="profile-email" style="margin-top:2px"></p>
           <p id="prof-email" class="profile-email"></p>
         </div>
@@ -58,22 +56,13 @@
     <section class="card">
       <div class="profile-grid">
         <div class="profile-section">
-          <h3>Preferences</h3>
+          <h3>Username & avatar</h3>
           <div class="token-select-row" style="margin: 8px 0 10px;">
             <input id="prof-username-input" class="input" placeholder="Choose a username (e.g., alice_01)" />
             <button id="prof-username-save" class="btn">Save username</button>
           </div>
-          <div class="prefs-row" style="margin-bottom:8px">
-            <span class="muted">Severities:</span>
-            <button class="sev-btn" data-sev="critical" title="Critical">🚨 Critical</button>
-            <button class="sev-btn" data-sev="warning" title="Warning">⚠️ Warning</button>
-            <button class="sev-btn" data-sev="info" title="Info">🛟 Info</button>
-          </div>
-          <label class="switch small" title="Include dismissed alerts">
-            <span class="switch-caption">Show all</span>
-            <input type="checkbox" id="prof-show-all" />
-            <span class="slider" aria-hidden="true"></span>
-          </label>
+          <div class="muted" style="margin:6px 0 8px">Choose a default avatar:</div>
+          <div id="avatar-presets" class="pill-row"></div>
         </div>
 
         <div class="profile-section">
@@ -81,9 +70,27 @@
           <div id="prof-watch-pills" class="pill-row"></div>
           <div class="token-select-row" style="margin-top:8px;">
             <input id="prof-token-input" class="input" type="text" placeholder="Add a token (e.g., ETH)" list="token-datalist" />
+            <datalist id="token-datalist"></datalist>
             <button id="prof-add-token" class="btn">Add</button>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="card">
+      <div class="profile-section">
+        <h3>Alert preferences</h3>
+        <div class="prefs-row" style="margin-bottom:8px">
+          <span class="muted">Severities:</span>
+          <button class="sev-btn" data-sev="critical" title="Critical">🚨 Critical</button>
+          <button class="sev-btn" data-sev="warning" title="Warning">⚠️ Warning</button>
+          <button class="sev-btn" data-sev="info" title="Info">🛟 Info</button>
+        </div>
+        <label class="switch small" title="Include dismissed alerts">
+          <span class="switch-caption">Show all</span>
+          <input type="checkbox" id="prof-show-all" />
+          <span class="slider" aria-hidden="true"></span>
+        </label>
       </div>
     </section>
 
@@ -99,59 +106,6 @@
     </section>
   </main>
 
-  <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Profile — Crypto Lifeguard</title>
-  <link rel="stylesheet" href="/styles.css" />
-  <style>.auth-card{max-width:640px;margin:24px auto}.row{display:flex;gap:12px;align-items:center}</style>
-  <script defer>
-    async function loadProfile(){
-      try{
-        const r = await fetch('/api/me');
-        if (!r.ok) throw new Error('not signed in');
-        const me = await r.json();
-        document.getElementById('user-id').textContent = me.userId || '(anon)';
-        document.getElementById('watchlist').textContent = (me.watchlist||[]).join(', ');
-        document.getElementById('sev').textContent = (me.severity||[]).join(', ');
-        document.getElementById('showall').textContent = me.showAll ? 'Yes' : 'No';
-      }catch(e){ document.getElementById('authed').hidden=true; document.getElementById('not-authed').hidden=false; }
-    }
-    async function signIn(){ window.location.href = '/auth/google'; }
-    async function signOut(){ await fetch('/auth/logout', { method:'POST' }); window.location.href = '/'; }
-    window.addEventListener('DOMContentLoaded', loadProfile);
-  </script>
-</head>
-<body>
-  <header class="topbar"><div class="topbar-inner">
-    <div class="brand-wrap">
-      <img class="brand-logo" src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png" alt="Logo" />
-      <div class="brand-text"><h1 class="brand-title">Crypto Lifeguard</h1><p class="brand-tagline">Your profile</p></div>
-    </div>
-    <div class="actions"><a class="menu-btn" href="/">Home</a></div>
-  </div></header>
-
-  <main class="container">
-    <section class="card auth-card" id="authed">
-      <h2 class="section-title">Profile</h2>
-      <div class="row"><strong>User ID:</strong> <span id="user-id"></span></div>
-      <div class="row"><strong>Watchlist:</strong> <span id="watchlist"></span></div>
-      <div class="row"><strong>Severities:</strong> <span id="sev"></span></div>
-      <div class="row"><strong>Show all:</strong> <span id="showall"></span></div>
-      <div style="margin-top:12px"><button class="btn" onclick="signOut()">Sign out</button></div>
-    </section>
-
-    <section class="card auth-card" id="not-authed" hidden>
-      <h2 class="section-title">You’re not signed in</h2>
-      <p class="muted">Sign in to save your preferences to your account.</p>
-      <div style="margin-top:12px"><button class="btn" onclick="signIn()">Continue with Google</button></div>
-    </section>
-  </main>
   <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
 </body>
 </html>
