Profile: show Admin badge for whitelisted admins

--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,8 @@
       <div class="profile-header">
         <div id="prof-avatar" class="profile-avatar"></div>
         <div>
-          <h2 id="prof-name" class="profile-name">Loading...</h2>
+          <h2 id="prof-name" class="profile-name" style="display:flex; align-items:center; gap:8px">Loading...</h2>
+          <span id="prof-admin-badge" class="pill small" style="display:none; background:#e8fff5; border-color:#b9f3d3; color:#0c6a45; margin-top:6px">Admin</span>
           <p id="prof-username" class="profile-email" style="margin-top:2px"></p>
           <p id="prof-email" class="profile-email"></p>
         </div>
