UI: hide tag filters and severity/show-all on Market and Summary; show only on Alerts

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <!-- Dedicated card for tag filters for clearer alignment -->
-    <section class="card filter-tags-card" aria-label="Tag filters">
+  <section id="filter-tags-card" class="card filter-tags-card" aria-label="Tag filters">
       <div class="tag-filters-wrap">
         <div class="tag-dropdown-container">
           <label for="tag-filters" class="tag-dropdown-label">Filter by tags:</label>
