Token selector: curated base list + dynamic enrichment; better datalist hints; accept validated custom symbols

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="card">
       <h2 class="section-title">Select tokens to monitor</h2>
       <div class="token-select-row">
-        <input id="token-input" class="input" type="text" placeholder="Type a token symbol (e.g., BTC, ETH, MATIC) and press Enter…" list="token-datalist" aria-label="Add token" />
+  <input id="token-input" class="input" type="text" placeholder="Type a token symbol (e.g., BTC, ETH, MATIC) and press Enter…" list="token-datalist" aria-label="Add token" autocomplete="on" autocapitalize="characters" spellcheck="false" />
         <datalist id="token-datalist"></datalist>
         <button id="add-token-btn" class="btn">Add to watchlist</button>
       </div>
