Admin info: add /admin/info endpoint + UI panel; make restore-from-file conditional via env flag

--- a/admin.html
+++ b/admin.html
@@ -32,6 +32,7 @@
 
   <main class="container">
     <section class="card">
+      <div id="admin-info" class="note" style="margin-bottom:10px"></div>
       <h2 class="section-title">Alerts</h2>
       <div class="admin-grid">
         <div>
