Admin: Backup now button + backups list panel; audit log for profile events; DB restore now conditional

--- a/admin.html
+++ b/admin.html
@@ -42,6 +42,14 @@
             <button id="btn-save-token" class="btn" type="button">Use token</button>
             <span class="note" id="token-status">No token</span>
           </div>
+          <div class="row" style="margin-bottom:8px">
+            <button id="btn-backup-now" class="btn" type="button">Backup now</button>
+            <button id="btn-refresh-backups" class="btn" type="button">Refresh backups</button>
+          </div>
+          <div class="field">
+            <label>Backup archive</label>
+            <div id="backup-list" class="admin-list" style="max-height:240px"></div>
+          </div>
           <div id="list" class="admin-list"></div>
         </div>
         <div>
