Admin exports: downloadable backups, users.csv, and audit.csv; archive list now links to files

--- a/admin.html
+++ b/admin.html
@@ -131,6 +131,15 @@
             </div>
             <div id="backup-list" class="admin-list" style="max-height:260px"></div>
           </div>
+          <hr />
+          <div class="field">
+            <label>Exports</label>
+            <div class="row">
+              <button id="btn-export-users" class="btn" type="button">Export users.csv</button>
+              <button id="btn-export-audit" class="btn" type="button">Export audit.csv</button>
+            </div>
+            <div class="muted">Audit export defaults to last 30 days.</div>
+          </div>
         </aside>
       </div>
     </section>
